--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "daisyui": "^4.10.2",
     "firebase": "^10.7.2",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
